Bug 2013043 - Set associated browsing context ID for fetch r=necko-reviewers,dom-worker-reviewers,devtools-reviewers,cookie-reviewers,manuel,nchevobbe,edgul,kershaw,edenchuang

Changes name of "WorkerAssociatedBrowsingContext" in LoadInfo to just
"AssociatedBrowsingContext" to signal it's somewhat broader use case.

For reporting api, to show up in dev tools, we need dev tooling to match
against the channel and for that it needs a browsing context id (or
something similar). We set the associated bc id and then try matching
against that in NetworkUtils.sys.mjs.

Differential Revision: https://phabricator.services.mozilla.com/D283896